...
                    style: TextStyle(
                      fontSize: 12.sp,
                      color: textColor,
                    ),
                  ),
                  TextButton(
                    key: Key("gotoRegister"),
                    onPressed: () {
                      Get.off(() => Register());
                    },
                    child: Text(
                      "Register",
                      style: TextStyle(
...
